# src/databases/@types/food.type.ts
@@ -1,0 +1,7 @@
+export interface Ifood{
+    name : string;
+    price : number;
+    type : string;
+    thumbnail : string;
+    isdeleted ?: boolean;
+}
